--- a/public/sass/project/_p-footer.scss
+++ b/public/sass/project/_p-footer.scss
@@ -1,16 +1,17 @@
 
 // 共通フッター(ログイン後)
 .p-footer {
-  position: absolute;
-  right: 0; bottom: 0;
   width: 100%;
   height: 3rem;
-  padding: 0 1rem;
+  padding: 0 2rem;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   pointer-events: none;
+  display: none;
   .copyright{
-    font-size: 12px;
+    font-size: 11px;
+    letter-spacing: .07em;
+    color: var(--navy-300);
   }
 }
