--- a/public/sass/project/_p-header.scss
+++ b/public/sass/project/_p-header.scss
@@ -14,6 +14,11 @@
     box-shadow: 0 4px 4px rgba(24,34,91,.16);
     z-index: 1;
     opacity: .6;
+    transition: all .4s ease-out;
+    cursor: pointer;
+    &:hover{
+      opacity: 1;
+    }
     .icon{
       width: 16px;
       height: 14px;
@@ -32,7 +37,9 @@
         }
       }
     }
-    &--close{
+    &.close{
+      opacity: 1;
+      left: 16px;
       .icon{
         align-items: flex-start;
       }
