--- a/public/sass/foundation/_base.scss
+++ b/public/sass/foundation/_base.scss
@@ -3,7 +3,7 @@ html{
   min-width: 1080px;
 }
 body {
-  color: var(--text-primary);
+  color: #222;
   font-family: var(--family);
   font-weight: 400;
   font-size: var(--font-sm);
@@ -24,7 +24,7 @@ body {
   }
   a,button {
     cursor: pointer;
-  }
+  } 
   // サイドメニューを閉じたとき
   &.sideNav--close{
     .p-page,
