--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -4,11 +4,11 @@
   color: var(--button-text);
   border: 1px solid var(--button-border);
   background-color: var(--button-surface);
-  font: 400 var(--font-sm)/1.5 var(--family);
+  font: 400 var(--font-xs)/1 var(--family);
   display: inline-grid;
   place-items: center;
   padding: 1em;
-  border-radius: var(--radius-md);
+  border-radius: var(--radius-sm);
   cursor: pointer;
 
   &:hover {
@@ -65,6 +65,30 @@
     --button-surface: var(--normal) ;
     --button-surface-hover: var(--hover);
   }
+  
+  // ブランドアクセントカラーボタン
+  &--brandAccent {
+    --normal: var(--main-accent);
+    --hover: var(--white);
+
+    --button-text: var(--white);
+    --button-text-hover: var(--main-accent);
+    --button-border: var(--normal);
+    --button-border-hover: var(--main-accent);
+    --button-surface: var(--normal) ;
+    --button-surface-hover: var(--hover);
+  }
+
+  &--cancel{
+    --normal: #B9D4E6;
+
+    --button-text: var(--normal);
+    --button-text-hover: var(--normal);
+    --button-border: var(--normal);
+    --button-border-hover: var(--normal);
+    --button-surface: var-(-white) ;
+    --button-surface-hover: #f4f5f6;
+  }
 
   // サイズ
   &--sm {
@@ -78,6 +102,24 @@
   // 横幅いっぱい
   &--full {
     width: 100%;
+  }
+
+  // テキスト
+  &--text {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+    color: #9DA7AE;
+    font-size: var(--font-2xs);
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: -.02em;
+    &:hover{
+      color: #2b2e38;
+    } 
   }
 
   // ターゲットブランク
