--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -1,74 +1,150 @@
-
-// フォームを配置するためのタイトルを含んだエリア
 .p-formBlock {
-
-  // ヘッド
+  --border-action: #eee;
+  border: 1px solid var(--box-border);
+  border-radius: var(--radius-md);
+  background: var(--white);
+  &.min{
+    .p-formBlock__body{
+      padding: var(--spacing-md);
+    }
+  }
   &__head {
-    margin: 0 0 var(--spacing-lg);
-
-
-    // プラグイン対応
-    // ログインの場合
-    &--login {
-      display: none;
-      &:has(~ .p-formBlock__body .pmpro_login_wrap) {
-        display: block;
-      }
+    padding: var(--spacing-sm) var(--spacing-md);
+    border-bottom: 1px solid var(--table-tr);
+    .title{
+      font-size: var(--font-md);
+      font-weight: 700;
+      line-height: 1;
     }
-    // パスワードリセットの場合
-    &--lost {
-      display: none;
-      &:has(~ .p-formBlock__body .pmpro_lost_password_wrap) {
-        display: block;
-      }
-    }
-
   }
-  // タイトル
-  &__title {
-    font: 700 var(--font-xl)/1.5 var(--family);
+  &__body{
+    padding: var(--spacing-lg) var(--spacing-md) var(--spacing-md);
   }
-  &__description {
-    font: 400 var(--font-sm)/1.9 var(--family);
-    margin: 1.5em 0 0;
+  // フォームを囲っているタグ
+  &__form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
-
-  // プラグイン
-  .pmpro_lost_password-instructions {
-    @extend .p-formBlock__description;
-  }
-
-  // フレーズ
-  &__phrase {
-    font: 700 var(--font-xl)/1.5 var(--family);
+  // ボタン
+  &__action{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--spacing-md);
-    padding-block: var(--spacing-sm);
-
-    svg {
-      width: 48px;
-      height: auto;
-      aspect-ratio: 1;
+    justify-content: flex-end;
+    gap: var(--spacing-sm);
+    grid-column: 1/3;
+    text-align: right;
+    padding-block-start: var(--spacing-xs);
+    border-top: 1px solid var(--border-action);
+  }
+  // 詳細情報
+  &__info{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px 0;
+    .item{
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-column: span 2;
+      gap: 0 var(--spacing-3xs);
+      &.column{
+        grid-template-columns: 1fr;
+        gap: 12px 0;
+      }
+      &.space{
+        margin-block-end: var(--spacing-2xs);
+      } 
+      .label{
+        color: #666;
+        font-size: var(--font-2xs);
+        white-space: nowrap;
+      }
+      .data{
+        color: #444;
+        &.image{
+          width: 4.5rem;
+          height: 4.5rem;
+        }
+      }
     }
-  }
-
-  // アクション
-  &__action {
-    margin: var(--spacing-md) 0 0;
-  }
-
-  // フローボタン
-  &__flowButtonArea{
-    grid-template-areas: "back next";
-    .c-button{
-      &--back{
-        grid-area: back;
-      }
-      &--accent{
-        grid-area: next;
-      }
+    hr{
+      margin: 0;
+      width: 100%;
+      grid-column: span 2;
+      border: none;
+      border-top: 1px solid var(--border-action);
     }
   }
 }
+// // フォームを配置するためのタイトルを含んだエリア
+// .p-formBlock {
+
+//   // ヘッド
+//   &__head {
+//     margin: 0 0 var(--spacing-lg);
+
+
+//     // プラグイン対応
+//     // ログインの場合
+//     &--login {
+//       display: none;
+//       &:has(~ .p-formBlock__body .pmpro_login_wrap) {
+//         display: block;
+//       }
+//     }
+//     // パスワードリセットの場合
+//     &--lost {
+//       display: none;
+//       &:has(~ .p-formBlock__body .pmpro_lost_password_wrap) {
+//         display: block;
+//       }
+//     }
+
+//   }
+//   // タイトル
+//   &__title {
+//     font: 700 var(--font-xl)/1.5 var(--family);
+//   }
+//   &__description {
+//     font: 400 var(--font-sm)/1.9 var(--family);
+//     margin: 1.5em 0 0;
+//   }
+
+//   // プラグイン
+//   .pmpro_lost_password-instructions {
+//     @extend .p-formBlock__description;
+//   }
+
+//   // フレーズ
+//   &__phrase {
+//     font: 700 var(--font-xl)/1.5 var(--family);
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     gap: var(--spacing-md);
+//     padding-block: var(--spacing-sm);
+
+//     svg {
+//       width: 48px;
+//       height: auto;
+//       aspect-ratio: 1;
+//     }
+//   }
+
+//   // アクション
+//   &__action {
+//     margin: var(--spacing-md) 0 0;
+//   }
+
+//   // フローボタン
+//   &__flowButtonArea{
+//     grid-template-areas: "back next";
+//     .c-button{
+//       &--back{
+//         grid-area: back;
+//       }
+//       &--accent{
+//         grid-area: next;
+//       }
+//     }
+//   }
+// }
