--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -51,10 +51,16 @@
   }
   // テーブル
   table{
+    min-width: 1100px;
     width: 100%;
     height: 100%;
     tr{
-      
+      &[data-href] {
+        cursor: pointer;
+        &:hover{
+          background-color: #F5F8F9;
+        }
+      }
     }
     th,td{
       height: 100%;
@@ -77,6 +83,10 @@
             font-size: 11px;
           }
         }
+        // 表示なし
+        .none{
+          display: none;
+        }
       }
     }
     thead{
@@ -84,9 +94,10 @@
       th{
         height: 100%;
         .item{
-          font-size: 11px;
+          font-size: 12px;
+          line-height: 1.2;
           color: #888;
-          padding: .5rem .5rem .75rem;
+          padding: .75rem .5rem;
         }
         &:first-of-type{
           .item{
@@ -103,7 +114,28 @@
     tbody{
       height: 100%;
       td{
-
+        &:first-of-type{
+          .item{
+            padding-left: 1rem;
+          }
+        }
+        &:last-of-type{
+          .item{
+            padding-right: 1rem;
+          }
+        }
+      }
+    }
+    // 固定
+    &.sticky{
+      thead{
+        th{
+          background: var(--white);
+          position: -webkit-sticky;
+          position: sticky;
+          top: 0;
+          z-index: 1;
+        }
       }
     }
   }
