--- a/public/sass/layout/_l-main.scss
+++ b/public/sass/layout/_l-main.scss
@@ -4,4 +4,15 @@
   //padding: 0 0 3rem;
   height: 100%;
   overflow: auto;
+
+  // 編集
+  .l-edit {
+    height: 100%;
+    .p-page {
+      height: 100%;
+      display: grid;
+      grid-template-rows: auto 1fr;
+    }
+  }
 }
+
