--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -3,6 +3,8 @@
   border: 1px solid var(--box-border);
   border-radius: var(--radius-md);
   background: var(--white);
+  display: grid;
+  grid-template-rows: 1fr auto;
   &.min{
     .p-formBlock__body{
       padding: var(--spacing-md);
@@ -16,24 +18,45 @@
       font-weight: 700;
       line-height: 1;
     }
+    & + .p-formBlock__body{
+      padding: var(--spacing-lg) var(--spacing-md) var(--spacing-md);
+    }
   }
   &__body{
-    padding: var(--spacing-lg) var(--spacing-md) var(--spacing-md);
+    padding: var(--spacing-xl);
+  }
+  &__foot{
+    padding: 0 var(--spacing-xl) var(--spacing-lg);
+  }
+  &__middle{
+    padding-inline: var(--spacing-xl);
+    & + .p-formBlock__foot {
+      margin-block-start: var(--spacing-md);
+    }
   }
   // フォームを囲っているタグ
   &__form{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    &:has(.row){
+      grid-template-columns: 130px 1fr;
+      gap: 20px 0;
+    }
+    &:has(.p-formBlock__action){
+      .p-formBlock__action {
+        padding-block-start: var(--spacing-xs);
+      }
+    }
   }
   // ボタン
   &__action{
     display: flex;
     justify-content: flex-end;
-    gap: var(--spacing-sm);
+    gap: 10px;
     grid-column: 1/3;
     text-align: right;
-    padding-block-start: var(--spacing-xs);
+    padding-block-start: 20px;
     border-top: 1px solid var(--border-action);
   }
   // 詳細情報
