--- a/public/sass/project/_p-inputField.scss
+++ b/public/sass/project/_p-inputField.scss
@@ -4,6 +4,24 @@
 // パーツ類
 .p-inputField {
 
+  // labelとinputが横並び
+  &.row{
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: span 2;
+    align-items: center;
+    .label{
+      color: initial;
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 1;
+      margin-block-end: 0;
+    }
+    .alert{
+      grid-column: 2 / 3;
+    }
+  }
+
   // ファイルアップロード
   &--uploadFile {
     label {
@@ -245,8 +263,16 @@
   // アラート
   .alert {
     color: var(--text-alert);
-    font-size: 12px;
+    font-size: var(--font-2xs);
     margin-block-start: 2px;
+    &Box {
+      color: var(--text-alert);
+      font-size: var(--font-xs);
+      border: 1px solid var(--alert);
+      padding: 10px;
+      margin-block-start: 0;
+      background: rgba(255,0,0,.02);
+    }
   }
 }
 
