--- a/public/sass/project/_p-pager.scss
+++ b/public/sass/project/_p-pager.scss
@@ -40,6 +40,7 @@
       input{
         width: 72px;
         height: 28px;
+        min-height: auto;
         border-radius: var(--radius-sm);
         text-align: center;
         background: var(--white);
