--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -54,6 +54,9 @@
     min-width: 1100px;
     width: 100%;
     height: 100%;
+    &.w-auto{
+      min-width: auto;
+    }
     tr{
       &[data-href] {
         cursor: pointer;
@@ -86,6 +89,26 @@
         // 表示なし
         .none{
           display: none;
+        }
+        // タイトル
+        &.title{
+          font-size: var(--font-sm);
+        }
+        // 評価対象期間
+        &.term_arrow{
+          position: relative;
+          &::after{
+            content: "";
+            display: block;
+            width: 1.5rem;
+            height: 10px;
+            background-image: url(../../img/common/icon/term--arrow.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            position: absolute;
+            right: -10px;
+          }
         }
       }
     }
