[fix]組織作成：一覧/編集・追加（役職/等級/号俸/雇用形態）

--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -33,6 +33,11 @@
     & + .p-formBlock__foot {
       margin-block-start: var(--spacing-md);
     }
+    &:has(.c-button--text){
+      & + .p-formBlock__foot {
+        margin-block-start: var(--spacing-lg);
+      }
+    }
   }
   // フォームを囲っているタグ
   &__form{
