--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -87,6 +87,7 @@
 @use "project/_p-search.scss"; // 一覧絞り込み検索
 @use "project/_p-user.scss"; // ユーザー情報
 @use "project/_p-modal.scss"; // モーダル
+@use "project/_p-organization.scss"; // 組織作成
 
 // ダッシュボード --------------------
 // layout
