--- a/public/sass/project/_p-pager.scss
+++ b/public/sass/project/_p-pager.scss
@@ -44,6 +44,7 @@
         text-align: center;
         background: var(--white);
         font-size: 14px;
+        min-height: inherit;
       }
     }
   }
