--- a/public/sass/component/_c-scroll.scss
+++ b/public/sass/component/_c-scroll.scss
@@ -1,7 +1,7 @@
 .c-scroll {
   overflow: auto;
   width: 100%;
-  max-height: 100%;
+  max-height: 55vh;
   &::-webkit-scrollbar{
     background: #F5F8FA;
     width: 6px;
