--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -16,11 +16,18 @@
       .mainText{
         display: flex;
         align-items: baseline;
-        gap: 24px;
+        gap: 1.5rem;
       }
       .title{
         font-size: 20px;
         font-weight: 600;
+      }
+      .c-txt__xs{
+        padding-inline-start: 1.5rem;
+        border-left: 1px solid var(--box-border);
+        span{
+          line-height: 1;
+        }
       }
       .count{
         display: flex;
@@ -54,6 +61,9 @@
     min-width: 1100px;
     width: 100%;
     height: 100%;
+    &.t-table__900{
+      min-width: 900px;
+    }
     tr{
       &[data-href] {
         cursor: pointer;
@@ -73,10 +83,6 @@
         justify-content: center;
         font-size: 13px;
         color: #444;
-        p{
-          font-size: 13px;
-          color: #444;
-        }
         // 評価者・承認者
         &--step{
           .name{
@@ -129,12 +135,225 @@
     // 固定
     &.sticky{
       thead{
+        position:sticky;
+        top:0;
+        tr{
+          position:relative;
+          &:after{
+            content: '';
+            display: block;
+            height:1px;
+            width:100%;
+            position:absolute;
+            bottom:0;
+            left:0;
+            z-index: 2;
+            background-color: var(--table-tr);
+          }
+        }
         th{
           background: var(--white);
           position: -webkit-sticky;
           position: sticky;
           top: 0;
           z-index: 1;
+        }
+      }
+    }
+  }
+  &__cell{
+    width: calc(90px * 13);
+    display: grid;
+    grid-template-columns: repeat(12, 90px);
+    &--wrapper{
+      display: grid;
+      grid-template-columns: 90px 1fr;
+      >*{
+        min-width: 1px;
+        height:100%;
+        width:100%;
+        .c-txt__weight--600,.c-txt__gray-600{
+          width: 45px;
+          padding: 1.5rem 6px;
+          border-right: solid 1px var(--box-border);
+          text-align: center;
+          background-color: var(--white);
+        }
+        .c-txt__gray-600{
+          background-color: #FAFBFB;
+        }
+      }
+      .u-flex{
+        border-bottom: solid 1px var(--box-border);
+      }
+    }
+    >*{
+      min-width: 1px;
+      height:100%;
+      width:100%;
+      .c-txt__weight--600,.c-txt__gray-600{
+        width: 45px;
+        padding: 1.5rem 6px;
+        border-right: solid 1px var(--box-border);
+        text-align: center;
+        background-color: var(--white);
+      }
+      .c-txt__gray-600{
+        background-color: #FAFBFB;
+      }
+    }
+  }
+  &__check{
+    max-height: 70vh;
+    overflow: auto;
+    display: flex;
+    .t-wrapper{
+      flex:auto;
+    }
+    &--head{
+      padding: 1rem;
+      min-width: 500px;
+    }
+    .t-table{
+      width: 100%;
+      min-width: 1710px;
+      th,td{
+        font-size: 13px;
+      }
+      thead{
+        color: var(--white);
+        top:0;
+        position: sticky;
+        z-index: 4;
+        th{
+          background-color: var(--main);
+          padding: 0;
+          .cell{
+            padding: 5px 1rem;
+            border: 1px solid #2C436C;
+            background-color: var(--main);
+          }
+          .c-border_0{
+            border: none;
+            text-align: center;
+            &:after{
+              content: none;
+            }
+          }
+        }
+      }
+      tbody{
+        tr{
+          &:nth-of-type(even){
+            th{
+              background-color: #E9EDF0;
+            }
+          }
+        }
+        th,td{
+          background-color: #f6f8fa;
+        }
+        th{
+          padding: 6px .5rem;
+        }
+        td{
+          div{
+            &:last-of-type{
+              border-left: none;
+            }
+          }
+        }
+      }
+    }
+    .sticky{
+      &_1{
+        position: sticky;
+        left:0;
+        z-index: 3;
+        &:before{
+          content: '';
+          display:block;
+          position:absolute;
+          bottom:0;
+          left:0;
+          width:100%;
+          height:1px;
+          background-color: var(--box-border);
+        }
+        &:after{
+          content: '';
+          display:block;
+          position:absolute;
+          top:0;
+          right:0;
+          height:100%;
+          width:1px;
+          background-color: var(--box-border);
+        }
+      }
+      &_2{
+        position: sticky;
+        left:100px;
+        z-index: 2;
+        &:before{
+          content: '';
+          display:block;
+          position:absolute;
+          bottom:0;
+          left:0;
+          width:100%;
+          height:1px;
+          background-color: var(--box-border);
+        }
+        &:after{
+          content: '';
+          display:block;
+          position:absolute;
+          top:0;
+          right:0;
+          height:100%;
+          width:1px;
+          background-color: var(--box-border);
+        }
+      }
+      &_3{
+        position: sticky;
+        left:240px;
+        z-index: 2;
+        &:before{
+          content: '';
+          display:block;
+          position:absolute;
+          bottom:0;
+          left:0;
+          width:100%;
+          height:1px;
+          background-color: var(--box-border);
+        }
+        &:after{
+          content: '';
+          display:block;
+          position:absolute;
+          top:0;
+          right:0;
+          height:100%;
+          width:1px;
+          background-color: var(--box-border);
+        }
+      }
+      &_4{
+        position: sticky;
+        left:540px;
+        z-index: 2;
+        &:after{
+          content: '';
+          display:block;
+          position:absolute;
+          top:0;
+          right:0;
+          height:100%;
+          width:1px;
+          background-color: var(--box-border);
         }
       }
     }
