--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -61,13 +61,11 @@
     min-width: 1100px;
     width: 100%;
     height: 100%;
-<<<<<<< HEAD
     &.t-table__900{
       min-width: 900px;
-=======
+    }
     &.w-auto{
       min-width: auto;
->>>>>>> cfd2b786bb6a93d51e1bbd81325132b718063f1d
     }
     tr{
       &[data-href] {
@@ -88,10 +86,7 @@
         justify-content: center;
         font-size: 13px;
         color: #444;
-<<<<<<< HEAD
-=======
         p{
-          font-size: 13px;
           color: #444;
         }
         // 単位あり
@@ -106,7 +101,6 @@
             font-size: 10px;
           }
         }
->>>>>>> cfd2b786bb6a93d51e1bbd81325132b718063f1d
         // 評価者・承認者
         &--step{
           .name{
@@ -279,7 +273,6 @@
           }
           .c-border_0{
             border: none;
-            text-align: center;
             &:after{
               content: none;
             }
