[fix]クラス名共通化

--- a/public/sass/layout/_l-index.scss
+++ b/public/sass/layout/_l-index.scss
@@ -1,6 +1,6 @@
 // セルフチェック indexレイアウト
 .l-index {
-  &__devide{
+  &__split{
     display: grid;
     grid-template-columns: 330px auto;
     height: 100%;
