--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -161,7 +161,6 @@
       color: #2b2e38;
     } 
   }
-
   // ターゲットブランク
   &[target=_blank],
   &--upload {
@@ -171,7 +170,6 @@
     @include max(md) {
       grid-template-columns: 1fr auto;
     }
-
     &::before,
     &::after {
       content: "";
@@ -208,7 +206,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2rem;
+    width: 30px;
     aspect-ratio: 1;
     svg{
       fill: var(--box-border);
@@ -236,6 +234,4 @@
       background-color: #FE973833;
     }
   }
-
-
 }
