--- a/public/sass/project/_p-page.scss
+++ b/public/sass/project/_p-page.scss
@@ -2,13 +2,29 @@
 // 通常一覧一般ページ
 .p-page {
   padding: 2rem 2.5rem;
-
   &.min {
     width: min(100%, 730px);  
   }
-
   &__head {
-     margin: 0 0 2rem;
+    margin: 0 0 2rem;
+    &--title{
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+    &--action{
+      display:flex;
+      align-items:center;
+      gap:1.125rem;
+      .c-button--text{
+        font-size: 13px;
+        font-weight: 700;
+        padding: .75rem 0;
+        &.is-current{
+          color: var(--main-accent);
+          border-bottom: 2px solid var(--main-accent);
+        }
+      }
+    }
   }
   &__body {
     // ２列
