[add]入力ページ追加

--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -19,8 +19,8 @@
 
   // プライマリカラーボタン
   &--primary {
-    --normal: var(--melon-500);
-    --hover: var(--melon-800);
+    --normal: var(--main-accent);
+    --hover: var(--main-accent-lighten);
 
     --button-text: var(--white);
     --button-border: var(--normal);
