--- a/public/sass/foundation/_variables.scss
+++ b/public/sass/foundation/_variables.scss
@@ -17,6 +17,7 @@
   --main: #0F203E;
   --main-light: #15294B;
   --main-accent: #0A95C7;
+  --main-accent-lighten: #32b6e6;
   --line-mainSeparate: #304261;
   // ステータス
   --assessment: #0BB7C2;
