--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -150,6 +150,8 @@
     border: none;
     cursor: pointer;
     outline: none;
+    display: inline-grid;
+    place-items: center;
     padding: 0;
     appearance: none;
     color: #9DA7AE;
