--- a/public/sass/foundation/_variables.scss
+++ b/public/sass/foundation/_variables.scss
@@ -17,6 +17,7 @@
   --main: #0F203E;
   --main-light: #15294B;
   --main-accent: #0A95C7;
+  --main-accent-green: #34BFC2;
   --main-accent-lighten: #32b6e6;
   --line-mainSeparate: #304261;
   // ステータス
@@ -27,6 +28,7 @@
   --status-4: #aaa;
   
   // グレー
+  --noData: #F6F6F6;
   --gray-50: #F0F0F7;
   --gray-100: #e1e1e1;
   --gray-200: #D3D3D3;
