[fix]セルフチェックマスタ 一覧/新規追加(途中)

--- a/public/sass/foundation/_variables.scss
+++ b/public/sass/foundation/_variables.scss
@@ -139,6 +139,8 @@
   --button-border-hover: var(--gray-300);
   --button-surface: #fff;
   --button-surface-hover: var(--gray-50);
+  --button-icon: var(--text-primary);
+  --button-icon-hover: var(--gray-300);
 
   // リンクグループ
   --text-link-normal: var(--gray-500);
