--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -24,6 +24,9 @@
   }
   &__body{
     padding: var(--spacing-xl);
+    &.min{
+      padding: var(--spacing-md);
+    }
   }
   &__foot{
     padding: 0 var(--spacing-xl) var(--spacing-lg);
@@ -48,10 +51,24 @@
       grid-template-columns: 130px 1fr;
       gap: 20px 0;
     }
+    &.spance_min{
+     gap: var(--spacing-sm);
+    }
     &:has(.p-formBlock__action){
       .p-formBlock__action {
         padding-block-start: var(--spacing-xs);
       }
+    }
+    hr{
+      width: 100%;
+      height: 1px;
+      grid-column: 1 / 3;
+      background: var(--table-tr);;
+      border: none;
+      margin-block: .5rem;
+    }
+    .left{
+      grid-column: 1/2;
     }
   }
   // ボタン
@@ -63,6 +80,9 @@
     text-align: right;
     padding-block-start: 20px;
     border-top: 1px solid var(--border-action);
+    &.center{
+      justify-content: center;
+    }
   }
   // 詳細情報
   &__info{
