--- a/public/sass/project/_p-page.scss
+++ b/public/sass/project/_p-page.scss
@@ -55,6 +55,20 @@
       }
     }
   }
+
+  // セルフチェックマスタ
+  &--selfCheck{
+    .p-formBlock{
+      &__body{
+        &.min{
+          .p-formBlock__action{
+            padding-block-start: var(--spacing-md);
+            margin-block-start: var(--spacing-sm);
+          }
+        }
+      }
+    }
+  }
 }
 
 
