--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -86,8 +86,14 @@
         justify-content: center;
         font-size: 13px;
         color: #444;
-        p{
-          color: #444;
+        &.row{
+          flex-direction: row;
+          align-items: center;
+          gap: 1rem;
+        }
+        small{
+          color: #888;
+          font-size: 11px;
         }
         // 単位あり
         &[data-unit]{ 
@@ -114,6 +120,22 @@
         // タイトル
         &.title{
           font-size: var(--font-sm);
+        }
+        // ボタン
+        .c-button{
+          &--text{
+            color: #6593A3;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 1.5;
+            &:hover{
+              color: var(--main);
+            }
+          }
+        }
+        // テキストカラー
+        &.c-txt__gray{
+          color: #666;
         }
         // 評価対象期間
         &.term_arrow{
