[fix]セルフチェックマスタ：新規追加・編集

--- a/public/sass/layout/_l-main.scss
+++ b/public/sass/layout/_l-main.scss
@@ -8,8 +8,9 @@
   // 編集
   .l-edit {
     height: 100%;
+    min-height: 100%;
     .p-page {
-      height: 100%;
+      min-height: 100%;
       display: grid;
       grid-template-rows: auto 1fr;
     }
