--- a/public/sass/project/_p-page.scss
+++ b/public/sass/project/_p-page.scss
@@ -30,7 +30,7 @@
     // ２列
     &.row2 {
       display: grid;
-      grid-template-columns: 1fr minmax(300px, 340px);
+      grid-template-columns: 1fr 340px;
       gap: var(--spacing-sm);
       align-items: flex-start;
     }
