--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -42,6 +42,14 @@
           font-size: var(--font-2xs);
           font-weight: 600;
         }
+        &.min{
+          .number{
+            font-size: var(--font-md);
+          }
+          .unit{
+            font-size: var(--font-3xs);
+          }
+        }
       }
       .action{
         margin-left: auto;
