--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -82,6 +82,7 @@
     border-top: 1px solid var(--border-action);
     &.center{
       justify-content: center;
+      align-items: center;
     }
   }
   // 詳細情報
