--- a/public/sass/layout/_l-index.scss
+++ b/public/sass/layout/_l-index.scss
@@ -2,10 +2,13 @@
 .l-index {
   &__split{
     display: grid;
-    grid-template-columns: 330px auto;
+    grid-template-columns: 280px auto;
     height: 100%;
     >*{
       min-width: 1px;
+    }
+    @media screen and ( min-width:1200px ) {
+      grid-template-columns: 330px auto;
     }
   }
 }
