--- a/public/sass/project/_p-modal.scss
+++ b/public/sass/project/_p-modal.scss
@@ -144,6 +144,7 @@
           &__action {
             padding: 20px var(--spacing-md);
             border-top: 1px solid var(--border-gray);
+            align-items: center;
           }
         }
       }
@@ -176,12 +177,90 @@
 .p-check{
   padding-inline: 1.25rem;
   margin-block-end: 2.5rem;
+  &__select{
+    padding: .5rem;
+    background-color: var(--gray-50);
+    border: 1px solid var(--gray-200);
+    border-radius:6px;
+    font-size: .75rem;
+    color: var(--gray-500);
+    cursor: pointer;
+    &:hover{
+      background-color: var(--white);
+    }
+    &--list{
+      display:none;
+      position:absolute;
+      top:50%;
+      left:50%;
+      transform:translate(-50%,-50%);
+      padding: 1rem;
+      background-color: var(--white);
+      border: 1px solid var(--border);
+      border-radius:4px;
+      .c-txt__xs{
+        &:after{
+          content: '閉じる';
+          color: #9eb4c2;
+          text-align: right;
+          margin-inline-start: 2rem;
+        }
+      }
+      ul{
+        display: grid;
+        gap: .25rem;
+        grid-template-columns: repeat(2, 1fr);
+      }
+      .p-check__checkbox{
+        display:flex;
+        gap: .5rem;
+        background-image: none !important;
+        width: 10rem;
+        input{
+          display:none;
+        }
+        &:has(input:checked){
+          border: 1px solid var(--main-accent-green);
+          background-color: var(--background-base-darken);
+        }
+      }
+    }
+    &.is-open{
+      .p-check__select--list{
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        z-index: 1;
+      }
+    }
+  }
   &__account{
     padding: .5rem;
     border: 1px solid var(--main-accent);
+    background-color: var(--background-base);
     border-radius:6px;
     flex:auto;
-    background-color: var(--background-base);
+    position:relative;
+    &--wrap{
+      display:flex;
+      flex-direction: column;
+      flex:auto;
+      gap: .25rem;
+    }
+    &--delete{
+      padding: 0;
+      border: 1px solid var(--gray-200);
+      background-color: var(--gray-50);
+      position:absolute;
+      top:.25rem;
+      right:.25rem;
+      border-radius:2px;
+      width: 1rem;
+      height: 1rem;
+      &:hover{
+        background-color: var(--gray-100);
+      }
+    }
   }
 }
 // 背景
