--- a/public/sass/project/_p-search.scss
+++ b/public/sass/project/_p-search.scss
@@ -42,7 +42,7 @@
   &__detail{
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 1rem;
     .c-button{
       border: none;
       height: auto;
@@ -52,6 +52,7 @@
       background: none;
       padding: 0 1rem;
       font-size: 13px;
+      width: 85px;
     }
   }
   // 設定した条件
@@ -59,7 +60,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    height: 24px;
+    height: 1.5rem;
     padding: 0 .5rem 0 .75rem;
     background: var(--white);
     border: solid 1px var(--main);
@@ -87,5 +88,6 @@
     height: 32px;
     font-size: 12px;
     padding: 0 1rem;
+    width: 85px;
   }
 }
