--- a/public/sass/project/_p-user.scss
+++ b/public/sass/project/_p-user.scss
@@ -7,6 +7,8 @@
     flex: 0 0 auto;
     width: 32px;
     height: 32px;
+    border-radius: 50%;
+    background-size: cover;
     .c-image{
       background: #eee;
       width: 100%;
