--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -90,6 +90,7 @@
 @use "layout/_l-header.scss"; 
 @use "layout/_l-main.scss"; 
 // project
+@use "project/_p-flash.scss"; // フラッシュメッセージ
 @use "project/_p-header.scss"; // ヘッダー
 @use "project/_p-sideNav.scss"; // サイドメニュー
 @use "project/_p-footer.scss"; // フッター
