--- a/public/sass/foundation/_base.scss
+++ b/public/sass/foundation/_base.scss
@@ -33,6 +33,10 @@ body {
       padding-left: 4.5rem;
     }
   }
+
+  &:has(.p-page.fixed) {
+    grid-template-rows:  1fr;
+  }
 }
 // svg読み込み
 .svg-defs{
@@ -47,6 +51,10 @@ body {
   grid-template-columns: auto 1fr;
   position: relative;
   max-height: 100dvh;
+  // p-page__headにfixedがある場合に非表示する
+  &:has(.p-page.fixed) .l-header {
+    display: none;
+  }
 }
 
 
