--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -84,6 +84,29 @@
       justify-content: center;
       align-items: center;
     }
+    &.fixed{
+      width: max-content;
+      align-items: center;
+      gap: var(--spacing-3xs);
+      border-top: none;
+      border-radius: var(--radius-md);
+      padding: var(--spacing-xs) var(--spacing-sm);
+      padding-inline-start: 0;
+      background: rgba(15,32,62,.8);
+      box-shadow: 0 4px 4px 0 rgba(0,0,0,.25);
+      backdrop-filter: blur(3px);
+      position: fixed;
+      bottom: 24px;
+      left: 50%;
+      transform: translateX(-50%);
+      span {
+        color: var(--white);
+        font-size: 12px;
+        font-weight: 500;
+        padding-inline-start: var(--spacing-md);
+        padding-inline-end: var(--spacing-2xs);
+      }
+    }
   }
   // 詳細情報
   &__info{
